--- a/app/assets/stylesheets/_mypage_mypage.scss
+++ b/app/assets/stylesheets/_mypage_mypage.scss
@@ -4,161 +4,165 @@
   display: flex;
   position:relative;
   margin: 40px auto 40px;
+
   &__content {
     width: 704px;
-    background-color: white;
-    &__container{
-      width: 740px; 
-
-        width: 740px; 
-
-        &__image {
-          height: 30px;
-          width: 30px;
-        }
-        &__nickname {
-          color: black;
-          font-size: 15px;
-        }
-        &__numbers {
-          &__evaluation {
+    &__container {
+      width: 704px;
+      &__user-head {
+        width: 700px;
+        height: 200px;
+        background: lightblue;
+      }
+      &__upper-list-tabs {
+        display: flex;                
+        text-align: center;
+        height: 74px;
+        width: 704px;
+        text-decoration: none;
+        &__list-left--active {
+          border-top: 2px solid red;
+          position: relative;   
+          background-color: #fff;                 
+          height: 74px;
+          width: 350px;
+          &__text {
+            position: absolute;
+            top: 24px;
+            right: 150px;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;                   
+            text-align: center;
+            color: #333;           
           }
-          &__put-up {
+          
 
+        }
+        &__list-right {
+          position: relative;
+          background-color: rgba(238, 238, 238, 0.664);
+          font-size: 16px;
+          font-weight: 600;
+          height: 74px;
+          width: 350px;
+          text-decoration: none;
+          text-align: center;
+          color: #333;
+          &__text {
+            position: absolute;
+            top: 24px;
+            right:120px;
+            align-items: center;
+            justify-content: center;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;                   
+            text-align: center;
+            color: #333;
+          }
+        }
+      }
+      &__lower-tab-head {
+        font-weight: 600;
+        height: 72px;
+        width: 700px;
+        margin: 40px 0 0;
+        padding-top: 20px;
+        padding-bottom: 20px;
+        padding-left: 15px; 
+        box-sizing: border-box;  
+        background: #fafafa;
+      }
+      &__lower-list-tabs {
+        display: flex;                
+        text-align: center;
+        height: 74px;
+        width: 704px;
+        text-decoration: none;
+        &__list-left--active {
+          position: relative;   
+          background-color: #eee;                
+          height: 74px;
+          width: 350px;
+          &__text {
+            position: absolute;
+            top: 24px;
+            right:150px;
+            font-size: 16px;
+            font-weight: 600;
+            text-decoration: none;                   
+            text-align: center;
+            color: #333;
+            
+          }
+        }
+        &__list-right {
+          border-top: 2px solid red;
+          position: relative;
+          background-color: #fff;
+          font-size: 16px;
+          font-weight: 600;
+          height: 74px;
+          width: 350px;
+          text-decoration: none;
+          text-align: center;
+          color: #333;
+          &__text {
+            position: relative;
+            background-color: rgba(238, 238, 238, 0.664);
+            font-size: 16px;
+            font-weight: 600;
+            top: 24px;
+            height: 74px;
+            width: 350px;
+            text-decoration: none;
+            text-align: center;
+            color: #333;
           }
         }
       }
     }
   }
 }
-//     &__container {
-//       width: 704px;
-
-//       &__tab-head {
-//         box-sizing: border-box;
-//         background-color: #fff;
-//         font-size: 16px;
-//         font-weight: 600;
-//         color: rgb(51, 51, 51);
-//         line-height: 72px;
-//         padding: 0 16px;
-//         height: 72px;
-//         width: 704px;
-//         }
-
-//       &__list-tabs {
-//         display: flex;                
-//         text-align: center;
-//         height: 74px;
-//         width: 704px;
-//         text-decoration: none;
-//         &__list-left--active {
-//           border-top: 2px solid red;
-//           position: relative;   
-//           background-color: #fff;                 
-//           height: 74px;
-//           width: 233.09px;
-//           &__text {
-//             position: absolute;
-//             top: 24px;
-//             right:85px;
-//             font-size: 16px;
-//             font-weight: 600;
-//             text-decoration: none;                   
-//             text-align: center;
-//             color: #333;
-            
-//           }
-          
-
-//         }
-//         &__list-center {
-//           position: relative;
-//           background-color: #ccc;
-//           font-size: 16px;
-//           font-weight: 600;
-//           height: 74px;
-//           width: 233.09px;
-//           text-decoration: none;
-//           text-align: center;
-//           color: #333;
-
-//           &__text {
-//             position: absolute;
-//             top: 24px;
-//             right:85px;
-//             font-size: 16px;
-//             font-weight: 600;
-//             text-decoration: none;                   
-//             text-align: center;
-//             color: #333;
-//           }
-//         }
-//         &__list-right {
-//           position: relative;
-//           background-color: #ccc;
-//           font-size: 16px;
-//           font-weight: 600;
-//           height: 74px;
-//           width: 233.09px;
-//           text-decoration: none;
-//           text-align: center;
-//           color: #333;
-//           &__text {
-//             position: absolute;
-//             top: 24px;
-//             right:85px;
-//             align-items: center;
-//             justify-content: center;
-//             font-size: 16px;
-//             font-weight: 600;
-//             text-decoration: none;                   
-//             text-align: center;
-//             color: #333;
-//           }
-//         }
-//       }
-//     }
-//   }
-// }
-
-// .put_up_goods-lists{    
-// &__list{
-//     position: relative;
-//     display: flex;
-//     display: block;
-//     border-bottom: 1px solid #eee;
-//     background-color: white;
-//     height:83px;
-//     width: 700px;
-
-//   &__image{
-//       margin: 18.5px ;
-//       display: inline-block;
-//       height:48px;
-//       width: 48px;
-//     }
-//     &__text{
-//       margin-bottom: 50px;
-//       overflow: hidden;
-//       display: -webkit-box;
-//       max-height: 4.4em;
-//       -webkit-line-clamp: 3;
-//       -webkit-box-orient: vertical;
-//       text-overflow: ellipsis;
-//       line-height: 1.5;
-//       display: inline-block;
-//       font-size: 14px;
-//       color: #333;
-
-//       &__icon{
-//         display: inline-block;           
-//         position: absolute;
-//         top: 40px;
-//         right: 16px;
-//         font-size: 14px;
-//         color: #333;
-//       }
-//     }    
-//   }
-// }
+  
+.mypage_mypage__content__container__container-lists {    
+  &__list {
+    position: relative;
+    display: flex;
+    display: block;
+    border-bottom: 1px solid #eee;
+    background-color: white;
+    height:83px;
+    width: 700px;
+  
+    &__image {
+      margin: 18.5px ;
+      display: inline-block;
+      height:48px;
+      width: 48px;
+      }
+      &__text {
+        margin-bottom: 50px;
+        overflow: hidden;
+        display: -webkit-box;
+        max-height: 4.4em;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        line-height: 1.5;
+        display: inline-block;
+        font-size: 14px;
+        color: #333;
+  
+        &__icon {
+          display: inline-block;           
+          position: absolute;
+          top: 40px;
+          right: 16px;
+          font-size: 14px;
+          color: #333;
+        }
+      }    
+    }
+  }
