--- a/app/views/shared/_mypage_mypage.html.haml
+++ b/app/views/shared/_mypage_mypage.html.haml
@@ -15,7 +15,7 @@
           .mypage_mypage__content__container__user-head__box__nickname
             AYA
           
-          -# 評価と出品数を１行で表示したいです。丸山
+          -# 評価と出品数
           %ul.mypage_mypage__content__container__user-head__box__numbers
             %li.mypage_mypage__content__container__user-head__box__numbers__evaluation 
               評価 20       
