--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
 @import 'make_sure_user_info';
 @import 'phone-input';
 @import 'products';
+@import 'test_products';
 @import 'profile_sidebar';
 @import 'purchase-confirmation';
 @import 'purchase';
