[WIP] 商品一覧表示
#What
メルカリトップページにおける出品商品一覧の表示
#Why
商品を一覧で表示するため。

メルカリは文字検索で商品を探し、購入することができるがそれだけでは単調なショッピングサイトである。
メルカリサイト内のビューで画像付きの商品を表示すると、ユーザーが直感的にどんな商品があるのか把握しやすくなり、利便性が向上する。

--- a/app/assets/stylesheets/_top_pege_middle.scss
+++ b/app/assets/stylesheets/_top_pege_middle.scss
@@ -166,8 +166,8 @@
     width: 188px;
     margin: 0 0 20px 10px;
     display: inline-block;
-    background-color: aqua;
   }
+
 
   .exhibit_btn{
     cursor: pointer;
@@ -198,4 +198,9 @@
         display: block;
         margin: 5px auto 0px;
     }
+  }
+
+  .goods_picture_1 {
+    height: 252px;
+    width: 188px;
   }
