--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -28,6 +28,9 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+              
+                = image_tag @image.goods_picture, class: "goods_picture_1"
+                -# - binding.pry
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
