--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -29,8 +29,7 @@
             - (1..10).each do |i|
               .block__area__product
               
-                = image_tag @image.goods_picture, class: "goods_picture_1"
-                -# - binding.pry
+                = image_tag @image.goods_picture.url, class: "goods_picture_1"
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
