--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -11,11 +11,13 @@
     %h2.confirmation-main__container__header
       購入内容の確認
     
-    -# 商品情報、値段など
+    -# 商品情報、値段など                  
+
     %section.confirmation-main__container__buy-content
       .confirmation-main__container__buy-content__inner
         %h3.confirmation-main__container__buy-content__inner__item
-          = image_tag @image.goods_picture, class: 'confirmation-main__container__buy-content__inner__item__image', size: '' if @image.goods_picture.present?
+          = image_tag @image.goods_picture.url, class: 'confirmation-main__container__buy-content__inner__item__image'
+          -# = image_tag @image.goods_picture.url, class: 'confirmation-main__container__buy-content__inner__item__image', size: '' if @image.goods_picture.present?
           -# = image_tag '/confirm-test.jpg', size: "", alt: "buy-item-image" , class: 'confirmation-main__container__buy-content__inner__item__image'
         %p.confirmation-main__container__buy-content__inner__item-name
           = @good.goods_name 
