--- a/app/views/cards/step5.html.haml
+++ b/app/views/cards/step5.html.haml
@@ -9,7 +9,7 @@
         ありがとうございます。
         %br
         会員登録が完了しました。
-      =link_to "aaa", class:"contents__btn" do
+      =link_to "/", class:"contents__btn" do
         メルカリをはじめる
 
   .contents
