--- a/app/views/shared/_main_page_header.html.haml
+++ b/app/views/shared/_main_page_header.html.haml
@@ -26,6 +26,10 @@
           .header__under__left__1__roll 
       .header__under__right
         .header__under__right__1
-          %a.header__under__right__1__1{href: "#"} 新規会員登録
+          -# %a.header__under__right__1__1{href: "#"} 新規会員登録
+        =link_to "/users/sign_in", class:"header__under__right__1__1" do
+          新規会員登録
         .header__under__right__2
-          %a.header__under__right__2__2{href: "#"} ログイン
+          -# %a.header__under__right__2__2{href: "#"} ログイン
+        =link_to "/users/sign_up", class:"header__under__right__2__2" do
+          ログイン
