--- a/app/views/signup/step2.html.haml
+++ b/app/views/signup/step2.html.haml
@@ -9,13 +9,14 @@
     %section.main-content
       %h2.main-content__header
         電話番号の確認
-      = form_with(url: '#') do |f|
+      = form_for @user,url: signup_index_path, method: :post, local: true do |f|
         .form-content
           .form-group
             = f.label  "携帯電話の番号"
-            = f.text_field :name, class: "phone-number" , placeholder: '携帯電話の番号を入力'
+            = f.text_field :phone_number, class: "phone-number" , placeholder: '携帯電話の番号を入力'
           %p 本人確認のため、携帯電話のSMS(ショートメッセージサービス)を利用して認証を行います。
-          %button SMSを送信する
+          -# %button SMSを送信する
+          = f.submit 'sms'
           %p ※電話番号は本人確認や不正利用防止のために利用します。他のユーザーに公開されることはありません。
           .form-text
             %a 電話番号の確認が必要な理由
