--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -4,12 +4,12 @@
 .signup3-wrapper
   .contents
     .contents__head
-      支払い方法
-    = form_with(url: '#' , class: "contents__form") do |f|
+      支払い方法    
       .contents__form__title1
+      = form_with model: @card, url: step5_cards_path, local: true do |f|
         %label カード番号
         %span.contents__form__require#card-number-require 必須
-        = f.text_field :name, class: "contents__form__input" , placeholder: '半角数字のみ'
+        = f.text_field :customer, class: "contents__form__input" , placeholder: '半角数字のみ'  
         %ul.contents__form__cardlist
           %li
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?2482339763', height: "15", width: "40"
@@ -25,50 +25,50 @@
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?2482339763', height: "15", width: "40"
           %li
             = image_tag '//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?2482339763', height: "15", width: "21"
+          
+        .contents__form__title
+          %span.contents__form__require 必須
+        -# %div{ style:"display:inline-flex"}
+        -#   %select{ name:"month", class:"contents__form__select contents__form__select__1" }
+        -#     %option{value:""} --
+        -#     %option{value:"01"} 01
+        -#     %option{value:"02"} 02
+        -#     %option{value:"03"} 03
+        -#     %option{value:"04"} 04
+        -#     %option{value:"05"} 05
+        -#     %option{value:"06"} 06
+        -#     %option{value:"07"} 07
+        -#     %option{value:"08"} 08
+        -#     %option{value:"09"} 09
+        -#     %option{value:"10"} 10
+        -#     %option{value:"11"} 11
+        -#     %option{value:"12"} 12
+        -#   %span 月
+        -#   %select{ name:"day", class:"contents__form__select" }
+        -#     %option{value:""} --
+        -#     %option{value:"19"} 19
+        -#     %option{value:"20"} 20
+        -#     %option{value:"21"} 21
+        -#     %option{value:"22"} 22
+        -#     %option{value:"23"} 23
+        -#     %option{value:"24"} 24
+        -#     %option{value:"25"} 25
+        -#     %option{value:"26"} 26
+        -#     %option{value:"27"} 27
+        -#     %option{value:"28"} 28
+        -#     %option{value:"29"} 29
+        -#   %sapn 年
 
-      .contents__form__title
-        %label 有効期限
-        %span.contents__form__require 必須
-        %div{ style:"display:inline-flex"}
-          %select{ name:"month", class:"contents__form__select contents__form__select__1" }
-            %option{value:""} --
-            %option{value:"01"} 01
-            %option{value:"02"} 02
-            %option{value:"03"} 03
-            %option{value:"04"} 04
-            %option{value:"05"} 05
-            %option{value:"06"} 06
-            %option{value:"07"} 07
-            %option{value:"08"} 08
-            %option{value:"09"} 09
-            %option{value:"10"} 10
-            %option{value:"11"} 11
-            %option{value:"12"} 12
-          %span 月
-          %select{ name:"day", class:"contents__form__select" }
-            %option{value:""} --
-            %option{value:"19"} 19
-            %option{value:"20"} 20
-            %option{value:"21"} 21
-            %option{value:"22"} 22
-            %option{value:"23"} 23
-            %option{value:"24"} 24
-            %option{value:"25"} 25
-            %option{value:"26"} 26
-            %option{value:"27"} 27
-            %option{value:"28"} 28
-            %option{value:"29"} 29
-          %sapn 年
-
-      .contents__form__title
-        %label セキュリティコード
-        %span.contents__form__require 必須
-        %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
-      .contents__info
-        %span.contents__info__question ？
-        %span カード裏面の番号とは？
+        .contents__form__title
+          %label セキュリティコード
+          %span.contents__form__require 必須
+          %input{ class:"contents__form__input", maxlength:"10", name:"card-name", placeholder:"カード背面4桁もしくは3桁の番号", type:"text", value:""}
+        .contents__info
+          %span.contents__info__question ？
+          %span カード裏面の番号とは？  
+          = f.submit '次に進む', class: 'contents__btn'
+          
       
-      %button{ type:"submit", class:"contents__btn" } 次に進む
       -# ページのフッター部分
   %footer.confirmation-footer
     %ul.confirmation-footer-container
