--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -11,7 +11,7 @@
     .contents__head
       新規会員登録
     .contents__btn
-      =link_to "aaa", class:"contents__btn contents__btn--1" do
+      =link_to "/signup/step1", class:"contents__btn contents__btn--1" do
         %i.far.fa-envelope
         メールアドレスで登録する
       =link_to "aaa", class:"contents__btn contents__btn--2" do
