--- a/app/views/shared/_signup1.html.haml
+++ b/app/views/shared/_signup1.html.haml
@@ -7,14 +7,14 @@
     .contents__form__title1
       %label ニックネーム
       %span.contents__form__require 必須
-      / SNS認証の場合、@user.usernameによりフォームにユーザーネームがすでに表示された状態となる
+      / SNS認証の場合、@user.usernameによりフォームにユーザーネームがすでに表示された状態となる。条件定義未実装(神山)
       = f.text_field :username, autofocus: true, autocomplete: "username", class: 'contents__form__input' , value: @user.username
 
     .contents__form__title
       %label メールアドレス
       %span.contents__form__require 必須
       -# - binding.pry
-      / SNS認証の場合、@user.emailによりフォームにemailアドレスがすでに表示された状態となる
+      / SNS認証の場合、@user.emailによりフォームにemailアドレスがすでに表示された状態となる。条件定義未実装(神山)
       = f.email_field :email, autofocus: true, autocomplete: "email", class: 'contents__form__input' , value: @user.email
 
     .contents__form__title
