[WIP]商品一覧ページpriceとtitleの追加
#What
商品一覧ページpriceとtitleの追加
商品一覧ページに置いて各商品のアイコンに商品価格(price)と商品タイトル(title)を表示する

#Why
商品の値段とタイトルは必須事項であるから。これら２つを表示することはユーザーの購買意欲に関わってくる重要な項目である。値段とタイトルを表示することによってユーザーは直感的に商品価値を理解できるようになる。

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,7 +25,7 @@
 @import 'profile_sidebar';
 @import 'purchase-confirmation';
 @import 'purchase';
-@import 'top_pege_middle';
+@import 'top_page_middle';
 @import 'user_evaluation_all';
 @import 'edit-prfile';
 @import 'put_up_goods_on_sale';
