--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -143,8 +143,8 @@
             width: 188;
             position: relative;
           }
-          &__1{
-          }
+          // &__1{
+          // }
         }
       }
     }
@@ -166,6 +166,16 @@
     width: 188px;
     margin: 0 0 20px 10px;
     display: inline-block;
+    background: lightblue;
+    &__title {
+      width: 188px;
+      height: 80px;
+      background: white;
+    }
+    // &__ price {
+    //   width: 80px;
+    //   height: 30px;
+    // }
   }
 
 
