--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -165,17 +165,27 @@
     height: 252px;
     width: 188px;
     margin: 0 0 20px 10px;
+    box-sizing: border-box;
     display: inline-block;
     background: lightblue;
+    position: relative;
+    &__price {
+      width: 80px;
+      height: 30px;
+      border-top-right-radius: 15px;
+      border-bottom-right-radius: 15px;
+      padding-bottom: 5px;
+      background: rgba(0,0,0,.4);
+      position: absolute;
+      z-index: 1;
+    }
     &__title {
       width: 188px;
-      height: 80px;
+      height: 64px;
       background: white;
+      padding: 12px 12px;
+      box-sizing: border-box;
     }
-    // &__ price {
-    //   width: 80px;
-    //   height: 30px;
-    // }
   }
 
 
@@ -211,6 +221,7 @@
   }
 
   .goods_picture_1 {
-    height: 252px;
+    height: 188px;
     width: 188px;
+    z-index: -1;
   }
