--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -27,8 +27,8 @@
         width: 100%;
         padding: 56px 0px 30px;
         box-sizing: border-box;      
-        &__area{
-        }
+        // &__area{
+        // }
         &__text{
           margin-bottom: 16px;
           text-align: center;
@@ -220,7 +220,7 @@
     }
   }
 
-  .goods_picture_1 {
+  .goods_picture_ladies {
     height: 188px;
     width: 188px;
     z-index: -1;
