--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -29,9 +29,10 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product      
-                = image_tag @image.goods_picture.url, class: 'goods_picture_1'
+                = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
                 .block__area__product__price
-                
+                .block__area__product__title
+
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
