--- a/app/assets/stylesheets/_top_page_middle.scss
+++ b/app/assets/stylesheets/_top_page_middle.scss
@@ -171,16 +171,21 @@
     &__good-pic_price_box {
       height: 188px;
       width: 188px;
-      
+      position: relative;
       &__price {
         width: 80px;
         height: 30px;
         border-top-right-radius: 15px;
         border-bottom-right-radius: 15px;
-        padding-bottom: 5px;
         background: rgba(0,0,0,.4);
+        color: white;
+        font-size: 17px;
         box-sizing: border-box;
+        padding: 5px 0px 5px 10px;
         position: absolute;
+        left: 0px;
+        bottom: 10px;
+        z-index: 1;
       }
     }
     &__title {
