--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -31,8 +31,10 @@
               .block__area__product
                 .block__area__product__good-pic_price_box 
                   = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
-                  .block__area__product__good-pic_price_box
-                .block__area__product__title
+                  .block__area__product__good-pic_price_box__price
+                    ¥3,000
+                %h3.block__area__product__title
+                  アマガエルくん
 
       .middle__main__block
         .middle__main__block__item
