add_each_block_to all_section

--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -32,7 +32,7 @@
                 .block__area__product__good-pic_price_box 
                   = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
                   .block__area__product__good-pic_price_box__price
-                    ¥3,000
+                    ¥
                 %h3.block__area__product__title
                   アマガエルくん
 
@@ -47,6 +47,13 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
+                  
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -58,6 +65,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -69,6 +82,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
       .middle__main__category
         %h2.middle__main__category__text
           人気のブランド
@@ -94,6 +113,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -105,6 +130,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -116,6 +147,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
       .middle__main__block
         .middle__main__block__item
           .middle__main__block__item__top
@@ -127,6 +164,12 @@
           .block__area
             - (1..10).each do |i|
               .block__area__product
+                .block__area__product__good-pic_price_box 
+                  = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
+                  .block__area__product__good-pic_price_box__price
+                    ¥
+                %h3.block__area__product__title
+                  アマガエルくん
 
 =link_to tests_exhibit_path, class: 'exhibit_btn' do
   .exhibit_btn__moji
