--- a/app/views/shared/_top_page_middle.html.haml
+++ b/app/views/shared/_top_page_middle.html.haml
@@ -32,9 +32,9 @@
                 .block__area__product__good-pic_price_box 
                   = image_tag @image.goods_picture.url, class: 'goods_picture_ladies'
                   .block__area__product__good-pic_price_box__price
-                    ¥
+                    = "¥#{@good.price}"
                 %h3.block__area__product__title
-                  アマガエルくん
+                  = @good.goods_description
 
       .middle__main__block
         .middle__main__block__item
